[package]
name = "resty"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
futures = "0.3.31"
reqwest = { version = "0.13.1", features = ["json", "stream", "native-tls", "cookies"] }
unicode-segmentation = "1.12.0"
smallvec = "1.15.1"
